# albumapp-flask

./: .gitignore  README.rst  config.py  flaskenv_example  pyproject.toml  setup.py
app/: __init__.py  commands.py
app/models/: db.py  errorhandlers.py  utils.py
app/static/css/: iconfonts.css
app/static/reportbro/: reportbro.js  reportbro.js.map  reportbro.min.js  reportbro.min.js.map
app/templates/: layout.html
app/templates/album/: edit.html  index.html
app/templates/error/: http400.html  http401.html  http403.html  http404.html  http410.html  http500.html  http503.html
app/templates/report/: edit.html
app/translations/en_GB/LC_MESSAGES/: messages.po
app/views/: album.py  home.py  report.py
